--- a/baru-excursion-en-barco-privado.html
+++ b/baru-excursion-en-barco-privado.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Excursión en barco privado en Barú 2023</title>
+    <title>Excursión en barco privado en Barú</title>
     <script type="application/ld+json">
         {
             "@context": "https://schema.org/",
@@ -15,7 +15,7 @@
               "https://toursopen.netlify.app/img/playa-blanca-2023.png"
              ],
             "description": "Transporte terrestre, almuerzo (Pescado, pollo o vegetariano).",
-            "sku": "0160775449",
+            "sku": "0160775411",
             "mpn": "440112",
             "brand": {
               "@type": "Brand",
@@ -99,71 +99,38 @@
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a href="index.html" class="nav-item nav-link">Inicio</a>
+                    <a href="index.html" class="nav-item nav-link active">Inicio</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Barú</a>
                         <div class="dropdown-menu">
                             <a href="baru-playa-blanca.html" class="dropdown-item">Playa Blanca</a>
-                            <a href="baru-aviario-nacional-de-colombia.html" class="dropdown-item">Aviario Nacional de
+                            <a href="baru-aviario-nacional-de-colombia.html" class="dropdown-item active">Aviario Nacional de
                                 Colombia</a>
                             <a href="baru-playa-puntilla.html" class="dropdown-item">Playa Puntilla</a>
                             <a href="baru-buceo-y-esnorquel.html" class="dropdown-item">Buceo y esnórquel</a>
-                            <a href="baru-excursion-en-barco-privado.html" class="dropdown-item active">Excursión en barco
+                            <a href="baru-excursion-en-barco-privado.html" class="dropdown-item">Excursión en barco
                                 privado</a>
-                            <a href="minicurso-de-buceo-en-baru.html" class="dropdown-item">Minicurso de Buceo en
-                                Barú</a>
                         </div>
                     </div>
 
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Islas del Rosario</a>
+                        <a href="islas-del-rosario-cartagena-2023.html" class="nav-link dropdown-toggle" data-toggle="dropdown">Islas del Rosario</a>
                         <div class="dropdown-menu">
-                            <a href="islas-del-rosario-oceanario.html" class="dropdown-item">Oceanario</a>
-                            <a href="islas-del-rosario-bora-bora-beach-club-cartagena.html" class="dropdown-item">Bora
-                                Bora Beach club Cartagena</a>
-                            <a href="islas-del-rosario-bendita-beach.html" class="dropdown-item">Bendita Beach</a>
-                            <a href="islas-del-rosario-playa-dulce.html" class="dropdown-item">Playa Dulce</a>
-                            <a href="islas-del-rosario-islabela.html" class="dropdown-item">IslaBela (Islas del
-                                Rosario)</a>
-                            <a href="islas-del-rosario-borabora-beach-club.html" class="dropdown-item">Bora Bora Beach
-                                Club</a>
-                            <a href="islas-del-rosario-cholon.html" class="dropdown-item">Cholon (Islas del Rosario)</a>
-                            <a href="islas-del-rosario-isla-grande.html" class="dropdown-item">Isla Grande</a>
-                            <a href="islas-del-rosario-isla-del-pirata.html" class="dropdown-item">Isla del Pirata</a>
+                            <a href="islas-del-rosario-cartagena-2023.html" class="dropdown-item">Isla del rosario</a>
                         </div>
                     </div>
 
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Tierra Bomba</a>
+                        <a href="tierra-bomba-cartagena-2023.html" class="nav-link dropdown-toggle" data-toggle="dropdown">Tierra Bomba</a>
                         <div class="dropdown-menu">
-                            <a href="tierra-bomba-bocachica-fuerte-de-san-bernardo.html" class="dropdown-item">Bocachica
-                                - Fuerte de San Bernardo</a>
-                            <a href="tierra-bomba-punta-arena.html" class="dropdown-item">Punta Arena</a>
-                            <a href="tierra-bomba-makani-luxury-beach-club.html" class="dropdown-item">Makani Luxury
-                                Beach Club</a>
-                            <a href="tierra-bomba-marlin-beach-club.html" class="dropdown-item">Marlin Beach Club</a>
-                            <a href="tierra-bomba-namaste-beach-club.html" class="dropdown-item">Námaste Beach Club</a>
-                            <a href="tierra-bomba-tamarindo-beach-club.html" class="dropdown-item">Tamarindo Beach
-                                Club</a>
-                            <a href="tierra-bomba-tour-extremo-con-cuatrimoto.html" class="dropdown-item">Tour Extremo
-                                con cuatrimoto</a>
-                            <a href="ciclomontanismo-en-tierra-bomba.html" class="dropdown-item">Ciclomontañismo en
-                                Tierra Bomba (MountainBike)</a>
+                            <a href="tierra-bomba.html" class="dropdown-item">Tierra Bomba</a>
                         </div>
                     </div>
 
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Isla de San Bernardo</a>
+                        <a href="isla-san-bernardo-cartagena-2023.html" class="nav-link dropdown-toggle" data-toggle="dropdown">Isla de San Bernardo</a>
                         <div class="dropdown-menu">
-                            <a href="isla-de-san-bernardo-isla-palma.html" class="dropdown-item">Isla Palma</a>
-                            <a href="isla-de-san-bernardo-isla-mucura.html" class="dropdown-item">Isla Múcura</a>
-                            <a href="hoteles-en-medellin.html" class="dropdown-item">Makani Luxury Beach Club</a>
-                            <a href="hoteles-en-medellin.html" class="dropdown-item">Marlin Beach Club</a>
-                            <a href="hoteles-en-medellin.html" class="dropdown-item">Námaste Beach Club</a>
-                            <a href="hoteles-en-medellin.html" class="dropdown-item">Tamarindo Beach Club</a>
-                            <a href="hoteles-en-medellin.html" class="dropdown-item">Tour Extremo con cuatrimoto</a>
-                            <a href="hoteles-en-medellin.html" class="dropdown-item">Ciclomontañismo en Tierra Bomba
-                                (MountainBike)</a>
+                            <a href="isla-de-san-bernardo.html" class="dropdown-item">San Bernardo</a>
                         </div>
                     </div>
 
@@ -179,7 +146,6 @@
         </div>
     </div>
     <!-- Nav Bar End -->
-
 
     <!-- Page Header Start -->
     <div class="page-header page-excursion" id="page-excursion">
@@ -246,14 +212,23 @@
                             </div>
                             <div class="feature-text">
                                 <p>
-                                    Para empezar es importante asistir a un minicurso de buceo, el cual te enseña a respirar, a flotar, a controlar la presión debajo del agua.
+                                    Acceder a un bote exclusivo con suficiente espacio y amplio,estos barcos te permite disfrutar de lo que desees con tu familia, ya sea disfrutar de recorridos hacia islas con un transporte seguro, ¿Qué puedes hacer con un bote privado?.
+                                </p>
+                                <h4>Atardeceres en bote privado</h4>
+                                <p>
+                                    Seguramente has visto atardeceres en alguna parte del mundo, pero, ¿lo has visto más cerca desde un bote privado?, en barú, puedes deleitarte de estos maravillosos atardeceres.
                                 </p>
                                 <p>
-                                    Al comenzar, se inicia en una piscina para después de haber aprendido todo lo básico referente al buceo, se podrá dar el salto al mar. De a poco, de la ayuda de un guía e instructor, irás aprendiendo poco a poco a bucear y a desenvolverte mucho más en el agua.
+                                    Tus amistades y un buen vino serán los acompañantes ideales para estos momentos.
                                 </p>
+                                <h4>Anochecer en baru con bote privado</h4>
                                 <p>
-                                    Seguramente estarás muy animado a tomar este plan para tus vacaciones, pero <strong>¿Qué recomendaciones debes tener si quieres hacer Buceo o Snorckel en barú?</strong>
+                                    Disfrutar de la playa en una noche hermosa, es un plan que debes hacer en baru, sobre todo en ocasiones especiales como:
                                 </p>
+                                <ul>
+                                    <li>Luna de miel</li>
+                                    <li>Renovación de votos matrimoniales</li>
+                                </ul>
                             </div>
                         </div>
                         <div class="col-lg-7">
@@ -265,22 +240,18 @@
                         </div>
                     </div>
                     <div class="section-header">
-                        <h3>Recomendaciones antes de tomar plan de buceo o snorckel en Barú</h3>
+                        <h3>Recomendaciones antes de alquilar un bote privado en Barú</h3>
                     </div>
                     <div class="feature-text">
                         <p>
-                            Para este plan en específico, se dan diferentes recomendaciones para tenerlo siempre en mente, como lo son:
+                            Antes de disfrutar de un excelente plan, deberás tener en cuenta algunas recomendaciones:
                         </p>
                         <ul>
-                            <li>Prepárate física y mentalmente</li>
-                            <li>Mantén siempre la calma, evita el agotamiento</li>
-                            <li>Mira y no toques</li>
-                            <li>Escoge un excelente día para bucear</li>
-                            <li>Siempre ten precaución</li>
+                            <li>Lea los documentos que debe firmar</li>
+                            <li>Tenga en cuenta el clima</li>
+                            <li>Inspeccione el barco</li>
+                            <li>Si es posible, contrate un capitán</li>
                         </ul>
-                        <p>
-                            Con estas recomendaciones podrás pasar un excelente día de buceo; a continuación, te mostraré algunos tours que más adquieren nuestros clientes en barú.
-                        </p>
                     </div>
                 </div>
             </div>
