--- a/baru-playa-puntilla.html
+++ b/baru-playa-puntilla.html
@@ -98,71 +98,38 @@
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a href="index.html" class="nav-item nav-link">Inicio</a>
+                    <a href="index.html" class="nav-item nav-link active">Inicio</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Barú</a>
                         <div class="dropdown-menu">
                             <a href="baru-playa-blanca.html" class="dropdown-item">Playa Blanca</a>
-                            <a href="baru-aviario-nacional-de-colombia.html" class="dropdown-item">Aviario Nacional de
+                            <a href="baru-aviario-nacional-de-colombia.html" class="dropdown-item active">Aviario Nacional de
                                 Colombia</a>
-                            <a href="baru-playa-puntilla.html" class="dropdown-item active">Playa Puntilla</a>
+                            <a href="baru-playa-puntilla.html" class="dropdown-item">Playa Puntilla</a>
                             <a href="baru-buceo-y-esnorquel.html" class="dropdown-item">Buceo y esnórquel</a>
                             <a href="baru-excursion-en-barco-privado.html" class="dropdown-item">Excursión en barco
                                 privado</a>
-                            <a href="minicurso-de-buceo-en-baru.html" class="dropdown-item">Minicurso de Buceo en
-                                Barú</a>
                         </div>
                     </div>
 
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Islas del Rosario</a>
+                        <a href="islas-del-rosario-cartagena-2023.html" class="nav-link dropdown-toggle" data-toggle="dropdown">Islas del Rosario</a>
                         <div class="dropdown-menu">
-                            <a href="islas-del-rosario-oceanario.html" class="dropdown-item">Oceanario</a>
-                            <a href="islas-del-rosario-bora-bora-beach-club-cartagena.html" class="dropdown-item">Bora
-                                Bora Beach club Cartagena</a>
-                            <a href="islas-del-rosario-bendita-beach.html" class="dropdown-item">Bendita Beach</a>
-                            <a href="islas-del-rosario-playa-dulce.html" class="dropdown-item">Playa Dulce</a>
-                            <a href="islas-del-rosario-islabela.html" class="dropdown-item">IslaBela (Islas del
-                                Rosario)</a>
-                            <a href="islas-del-rosario-borabora-beach-club.html" class="dropdown-item">Bora Bora Beach
-                                Club</a>
-                            <a href="islas-del-rosario-cholon.html" class="dropdown-item">Cholon (Islas del Rosario)</a>
-                            <a href="islas-del-rosario-isla-grande.html" class="dropdown-item">Isla Grande</a>
-                            <a href="islas-del-rosario-isla-del-pirata.html" class="dropdown-item">Isla del Pirata</a>
+                            <a href="islas-del-rosario-cartagena-2023.html" class="dropdown-item">Isla del rosario</a>
                         </div>
                     </div>
 
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Tierra Bomba</a>
+                        <a href="tierra-bomba-cartagena-2023.html" class="nav-link dropdown-toggle" data-toggle="dropdown">Tierra Bomba</a>
                         <div class="dropdown-menu">
-                            <a href="tierra-bomba-bocachica-fuerte-de-san-bernardo.html" class="dropdown-item">Bocachica
-                                - Fuerte de San Bernardo</a>
-                            <a href="tierra-bomba-punta-arena.html" class="dropdown-item">Punta Arena</a>
-                            <a href="tierra-bomba-makani-luxury-beach-club.html" class="dropdown-item">Makani Luxury
-                                Beach Club</a>
-                            <a href="tierra-bomba-marlin-beach-club.html" class="dropdown-item">Marlin Beach Club</a>
-                            <a href="tierra-bomba-namaste-beach-club.html" class="dropdown-item">Námaste Beach Club</a>
-                            <a href="tierra-bomba-tamarindo-beach-club.html" class="dropdown-item">Tamarindo Beach
-                                Club</a>
-                            <a href="tierra-bomba-tour-extremo-con-cuatrimoto.html" class="dropdown-item">Tour Extremo
-                                con cuatrimoto</a>
-                            <a href="ciclomontanismo-en-tierra-bomba.html" class="dropdown-item">Ciclomontañismo en
-                                Tierra Bomba (MountainBike)</a>
+                            <a href="tierra-bomba.html" class="dropdown-item">Tierra Bomba</a>
                         </div>
                     </div>
 
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Isla de San Bernardo</a>
+                        <a href="isla-san-bernardo-cartagena-2023.html" class="nav-link dropdown-toggle" data-toggle="dropdown">Isla de San Bernardo</a>
                         <div class="dropdown-menu">
-                            <a href="isla-de-san-bernardo-isla-palma.html" class="dropdown-item">Isla Palma</a>
-                            <a href="isla-de-san-bernardo-isla-mucura.html" class="dropdown-item">Isla Múcura</a>
-                            <a href="hoteles-en-medellin.html" class="dropdown-item">Makani Luxury Beach Club</a>
-                            <a href="hoteles-en-medellin.html" class="dropdown-item">Marlin Beach Club</a>
-                            <a href="hoteles-en-medellin.html" class="dropdown-item">Námaste Beach Club</a>
-                            <a href="hoteles-en-medellin.html" class="dropdown-item">Tamarindo Beach Club</a>
-                            <a href="hoteles-en-medellin.html" class="dropdown-item">Tour Extremo con cuatrimoto</a>
-                            <a href="hoteles-en-medellin.html" class="dropdown-item">Ciclomontañismo en Tierra Bomba
-                                (MountainBike)</a>
+                            <a href="isla-de-san-bernardo.html" class="dropdown-item">San Bernardo</a>
                         </div>
                     </div>
 
