--- a/isla-de-san-bernardo.html
+++ b/isla-de-san-bernardo.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Aviario nacional de Colombia</title>
+    <title>Isla de San Bernardo 2023</title>
     <script type="application/ld+json">
         {
             "@context": "https://schema.org/",
             "@type": "Product",
-            "name": "Aviario nacional de Colombia",
+            "name": "Isla de San Bernardo 2023",
             "image": [
               "https://toursopen.netlify.app/img/aviario-nacional-de-colombia-2023.png"
              ],
@@ -33,7 +33,7 @@
             },
             "aggregateRating": {
               "@type": "AggregateRating",
-              "ratingValue": "4.7",
+              "ratingValue": "4.4",
               "reviewCount": "8"
             },
             "offers": {
@@ -114,14 +114,14 @@
                     <div class="nav-item dropdown">
                         <a href="islas-del-rosario-cartagena-2023.html" class="nav-link dropdown-toggle" data-toggle="dropdown">Islas del Rosario</a>
                         <div class="dropdown-menu">
-                            <a href="islas-del-rosario-cartagena-2023.html" class="dropdown-item">Isla del rosario</a>
+                            <a href="islas-del-rosario-oceanario.html" class="dropdown-item">Isla del rosario</a>
                         </div>
                     </div>
 
                     <div class="nav-item dropdown">
                         <a href="tierra-bomba-cartagena-2023.html" class="nav-link dropdown-toggle" data-toggle="dropdown">Tierra Bomba</a>
                         <div class="dropdown-menu">
-                            <a href="tierra-bomba-cartagena-2023.html" class="dropdown-item">Tierra Bomba</a>
+                            <a href="tierra-bomba-bocachica-fuerte-de-san-bernardo.html" class="dropdown-item">Tierra Bomba</a>
                         </div>
                     </div>
 
@@ -150,7 +150,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="h1">Aviario nacional de Colombia</h1>
+                    <h1 class="h1">Isla de San Bernardo 2023</h1>
                 </div>
                 <div class="col-12">
                     <a href="">Inicio</a>
@@ -167,9 +167,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5">
-                    <div class="section-header">
-                        <h2>Isla Barú</h2>
-                    </div>
                     <div class="feature-text">
                         <p>
                             La isla de Barú es uno de los destinos turístico mas visitado en toda la época del año, 
@@ -182,19 +179,7 @@
                 </div>
                 <div class="col-lg-7">
                     <div class="feature-img">
-                        <div class="row">
-                            <div class="col-6">
-                                <img src="img/loros-en-aviario-nacional-de-colombia.png" alt="loros en aviario nacional de colombia" loading="lazy">
-                            </div>
-                            <div class="col-6">
-                                <img src="img/tucan-en-aviario-nacional-de-colombia.png" alt="tucan aviario nacional de colombia" loading="lazy">
-                            </div>
-                            <div class="col-6">
-                                <img src="img/aves-en-aviario-nacional-de-colombia.png" alt="aves en aviario nacional de colombia" loading="lazy">
-                            </div>
-                            <div class="col-6">
-                                <img src="img/tortolas-en-aviario-nacional-de-colombia.png" alt="tortolas en aviario nacional en colombia" loading="lazy">
-                            </div>
+                        <div class="row"><img src="img/isla-san-bernardo.png" alt="isla san bernardo">
                         </div>
                     </div>
                 </div>
