--- a/luna-de-miel-en-cartagena-2023-todo-lo-que-debes-saber.html
+++ b/luna-de-miel-en-cartagena-2023-todo-lo-que-debes-saber.html
@@ -3,18 +3,20 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Aviario nacional de Colombia</title>
+    <title>Luna de miel en Cartagena 2023</title>
     <script type="application/ld+json">
         {
             "@context": "https://schema.org/",
             "@type": "Product",
-            "name": "Aviario nacional de Colombia",
+            "name": "Luna de miel en Cartagena 2023",
             "image": [
-              "https://toursopen.netlify.app/img/aviario-nacional-de-colombia-2023.png"
+              "https://toursopen.netlify.app/img/playa-blanca-imagen.png",
+              "https://toursopen.netlify.app/img/playa-blanca.png",
+              "https://toursopen.netlify.app/img/playa-blanca-2023.png"
              ],
-            "description": "Disfruta de 2 ecosistemas y 22 exhibiciones en el aviario nacional de colombia, veras 170 especies y 1.700 ejemplares de aves.",
-            "sku": "0555410087",
-            "mpn": "331564",
+            "description": "Transporte terrestre, almuerzo (Pescado, pollo o vegetariano).",
+            "sku": "0160777788",
+            "mpn": "440112",
             "brand": {
               "@type": "Brand",
               "name": "TourOpen"
@@ -33,14 +35,14 @@
             },
             "aggregateRating": {
               "@type": "AggregateRating",
-              "ratingValue": "4.7",
-              "reviewCount": "8"
+              "ratingValue": "4.9",
+              "reviewCount": "5"
             },
             "offers": {
               "@type": "Offer",
-              "url": "https://toursopen.netlify.app/baru-aviario-nacional-de-colombia.html",
+              "url": "https://toursopen.netlify.app/baru-playa-puntilla.html",
               "priceCurrency": "COP",
-              "price": "120.000",
+              "price": "530.000",
               "priceValidUntil": "2022-11-20",
               "itemCondition": "https://schema.org/UsedCondition",
               "availability": "https://schema.org/InStock"
@@ -50,9 +52,15 @@
     <script defer src="js/carrousel.js"></script>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="aviario nacional de colombia, aviario nacional en colombia, donde ver aves en colombia, aviario nacional de colombia en baru" name="keywords">
-    <meta content="Disfruta de 2 ecosistemas y 22 exhibiciones en el aviario nacional de colombia, veras 170 especies y 1.700 ejemplares de aves." name="description">
-    <meta property="og:title" content="Aviario nacional de Colombia">
-    <meta property="og:description" content="Disfruta de 2 ecosistemas y 22 exhibiciones en el aviario nacional de colombia, veras 170 especies y 1.700 ejemplares de aves.">
+    <meta content="¿Estás pensando planear tu luna de miel en Cartagena? Nosotros te
+    contamos porque Cartagena es la mejor ciudad para tu luna de miel, sabrás que plan
+    para tu luna de miel en Cartagena existe y las recomendaciones que debes tener,
+    además, te asesoramos gratis." name="description">
+    <meta property="og:title" content="Luna de miel en Cartagena 2023 – Todo lo que debes saber">
+    <meta property="og:description" content="¿Estás pensando planear tu luna de miel en Cartagena? Nosotros te
+    contamos porque Cartagena es la mejor ciudad para tu luna de miel, sabrás que plan
+    para tu luna de miel en Cartagena existe y las recomendaciones que debes tener,
+    además, te asesoramos gratis.">
 
     <!-- Favicon -->
     <link href="img/favicon.png" rel="icon">
@@ -121,7 +129,7 @@
                     <div class="nav-item dropdown">
                         <a href="tierra-bomba-cartagena-2023.html" class="nav-link dropdown-toggle" data-toggle="dropdown">Tierra Bomba</a>
                         <div class="dropdown-menu">
-                            <a href="tierra-bomba-cartagena-2023.html" class="dropdown-item">Tierra Bomba</a>
+                            <a href="tierra-bomba.html" class="dropdown-item">Tierra Bomba</a>
                         </div>
                     </div>
 
@@ -146,11 +154,11 @@
     <!-- Nav Bar End -->
 
     <!-- Page Header Start -->
-    <div class="page-header page-aviario">
+    <div class="page-header page-luna">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="h1">Aviario nacional de Colombia</h1>
+                    <h1 class="h1">Luna de miel en Cartagena 2023</h1>
                 </div>
                 <div class="col-12">
                     <a href="">Inicio</a>
@@ -168,33 +176,24 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="section-header">
-                        <h2>Isla Barú</h2>
+                        <h2>¿Por qué Cartagena es el mejor destino para tu luna de miel?</h2>
                     </div>
                     <div class="feature-text">
                         <p>
-                            La isla de Barú es uno de los destinos turístico mas visitado en toda la época del año, 
-                            en esta isla se encuentra el aviario nacional más grande de este país
+                            Cartagena recibió premio por el sector turístico en este año 2023, este premio avala su gran diversidad de su gastronomía, historia, con un encanto original de esta ciudad mágica
                         </p>
                         <p>
-                            Este atractivo tiene una amplia variedad de especies de aves, ya que cuenta con 170 especies con más de 1.700 ejemplares.
+                            La principal razón es porque Cartagena es la ciudad del romanticismo, su belleza mágica, su naturaleza increíble hace que muchas lunas de miel se celebren en esta maravillosa ciudad.
+                        </p>
+                        <p>
+                            Sus playas cristalinas, la arena abundante y un sol radiante hará que disfruten aún más de estas playas, entre estas: Playa blanca, Islas del rosario etc.…
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-7">
                     <div class="feature-img">
                         <div class="row">
-                            <div class="col-6">
-                                <img src="img/loros-en-aviario-nacional-de-colombia.png" alt="loros en aviario nacional de colombia" loading="lazy">
-                            </div>
-                            <div class="col-6">
-                                <img src="img/tucan-en-aviario-nacional-de-colombia.png" alt="tucan aviario nacional de colombia" loading="lazy">
-                            </div>
-                            <div class="col-6">
-                                <img src="img/aves-en-aviario-nacional-de-colombia.png" alt="aves en aviario nacional de colombia" loading="lazy">
-                            </div>
-                            <div class="col-6">
-                                <img src="img/tortolas-en-aviario-nacional-de-colombia.png" alt="tortolas en aviario nacional en colombia" loading="lazy">
-                            </div>
+                            <img src="img/luna-de-miel-en-playa-de-cartagena.png" alt="luna de miel en playas de cartagena">
                         </div>
                     </div>
                 </div>
@@ -207,54 +206,42 @@
     <div class="menu">
         <div class="container">
             <div class="section-header text-center">
-                <h2>Aviario Nacional de Colombia 2023</h2>
+                <h2>Planes y actividades para tu luna de miel ideal</h2>
             </div>
 
             <div class="feature">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5">
-                            <div class="section-header">
-                                <h3>Todo lo que debes saber sobre el Aviario Nacional de Colombia</h3>
-                            </div>
                             <div class="feature-text">
+                                <div class="section-header">
+                                    <h3>Los 5 mejores tours que debes hacer en tu luna de miel en Cartagena.</h3>
+                                </div>
                                 <p>
-                                    El aviario nacional de colombia es una <strong>entidad conservacionista</strong> cuenta con <strong>2 ecosistemas y 22 exhibiciones</strong>, esta entidad cuenta con el concepto de apadrinamiento de aves, el cual consiste en apoyar al mantenimiento de estas aves, así como lo son:.
+                                    Al saber que Cartagena es la mejor opción para tu luna de miel, desearás saber que planes hacer en Cartagena y que actividades realizar en esta ocasión tan especial.
+                                </p>
+                                <p>
+                                    Sin lugar a duda los pasadías a playa blanca barú, excursiones a islas del rosario o tour en Cartagena la heroica serán tu principal interés.
+                                </p>
+                                <p>
+                                    Las mejores fotos que te puedes tomar en Cartagena serán un gran recuerdo para todas sus vidas como esposos, por eso no deberías perderte estos 5 tures que te recomendamos acá:
                                 </p>
                                 <ul>
-                                    <li>Guacamaya Bandera</li>
-                                    <li>Rey de Gallinazos</li>
-                                    <li>Flamingo</li>
-                                    <li>Cóndor de los andes</li>
+                                    <li>Isla del Encanto</li>
+                                    <li>4 Islas</li>
+                                    <li>Bora Bora V.I.P</li>
+                                    <li>Baru + Isla del Rosario</li>
+                                    <li>Playa tranquila</li>
                                 </ul>
-                                <p>
-                                    Durante 4 años consecutivos ha recibido premios a la excelencia por esta misión que llevan hace muchos años.
-                                </p>
                             </div>
                         </div>
                         <div class="col-lg-7">
                             <div class="feature-img">
                                 <div class="row">
-                                    <img src="img/playa-blanca.png" alt="playa blanca baru">
+                                    <img src="img/luna-de-miel-en-playa-de-noche.png" alt="luna de miel en playa de noche">
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="section-header">
-                        <h3>Recomendaciones antes de ir al Aviario Nacional de Colombia</h3>
-                    </div>
-                    <div class="feature-text">
-                        <p>
-                            Al visitar al aviario nacional de colombia deberás cumplir con ciertos reglamentos y recomendaciones que imparte esta entidad, reglamentos como:
-                        </p>
-                        <ul>
-                            <li>No brindar alimentos a las aves</li>
-                            <li>No tocarlas</li>
-                            <li>No perseguir o corretear</li>
-                            <li>No se permite el ingreso de alimento</li>
-                            <li>No se permite el ingreso de armas</li>
-                            <li>No se permiten mascotas</li>
-                        </ul>
                     </div>
                 </div>
             </div>
