--- a/minicurso-de-buceo-en-baru.html
+++ b/minicurso-de-buceo-en-baru.html
@@ -3,19 +3,17 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Buceo - Snorckel en Barú 2023</title>
+    <title>Minicurso de buceo en Barú</title>
     <script type="application/ld+json">
         {
             "@context": "https://schema.org/",
             "@type": "Product",
-            "name": "Buceo - Snorckel en Barú 2023",
+            "name": "Minicurso de buceo en Barú",
             "image": [
-              "https://toursopen.netlify.app/img/playa-blanca-imagen.png",
-              "https://toursopen.netlify.app/img/playa-blanca.png",
-              "https://toursopen.netlify.app/img/playa-blanca-2023.png"
+              "https://toursopen.netlify.app/img/playa-blanca-imagen.png"
              ],
             "description": "Transporte terrestre, almuerzo (Pescado, pollo o vegetariano).",
-            "sku": "0160775449",
+            "sku": "0160775411",
             "mpn": "440112",
             "brand": {
               "@type": "Brand",
@@ -147,12 +145,13 @@
     </div>
     <!-- Nav Bar End -->
 
+
     <!-- Page Header Start -->
-    <div class="page-header page-buceo" id="page-buceo">
+    <div class="page-header page-minicurso" id="page-minicurso">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="h1">Buceo - Snorckel en Barú 2023</h1>
+                    <h1 class="h1">Minicurso de buceo en Barú</h1>
                 </div>
                 <div class="col-12">
                     <a href="">Inicio</a>
@@ -170,21 +169,24 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="section-header">
-                        <h2>Buceo - Snorckel (Isla Barú)</h2>
+                        <h2>Minicurso de buceo en Barú en 2023</h2>
                     </div>
                     <div class="feature-text">
                         <p>
-                            Si tu deseo es ver la naturaleza en su más alto esplendor, este es el plan que debes tomar, veras lo colorida que es la naturaleza, lo hermoso que es el mar, sus corales.
+                            <strong>¿Te gusta la relajación, pasar ratos con amigos y familiares, disfrutar del sol con un buen vino o con tu cerveza favorita?</strong> si es un si, este plan es el ideal para ti, una excursión en un Bote privado.
                         </p>
                         <p>
-                            La biodiversidad de estas extensas playas hacen de su mar, un paraíso oceanico hermoso que podrás disfrutar con tu pareja o familia.
+                            Seguramente te ves retratado o retratada en la imagen de la portada  junto con las personas mas allegadas a ti.
+                        </p>
+                        <p>
+                            A continuación te daremos algunas recomendaciones antes de adquirir un bote privado por alquiler
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-7">
                     <div class="feature-img">
                         <div class="row">
-                            <img src="img/buceo-snorckel.png" alt="playa puntilla baru" loading="lazy">
+                            <img src="img/minicurso-de-buceo.png" alt="minicurso de buceo en 2023" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -197,7 +199,7 @@
     <div class="menu">
         <div class="container">
             <div class="section-header text-center">
-                <h2>Buceo en Barú</h2>
+                <h2>Excursión en Barú</h2>
             </div>
 
             <div class="feature">
@@ -205,45 +207,50 @@
                     <div class="row">
                         <div class="col-lg-5">
                             <div class="section-header">
-                                <h3>Todo lo que debes antes de bucear en la Península de Barú</h3>
+                                <h3>Todo lo que debes antes de alquilar un bote privado en Barú</h3>
                             </div>
                             <div class="feature-text">
                                 <p>
-                                    Para empezar es importante asistir a un minicurso de buceo, el cual te enseña a respirar, a flotar, a controlar la presión debajo del agua.
+                                    Acceder a un bote exclusivo con suficiente espacio y amplio,estos barcos te permite disfrutar de lo que desees con tu familia, ya sea disfrutar de recorridos hacia islas con un transporte seguro, ¿Qué puedes hacer con un bote privado?.
+                                </p>
+                                <h4>Atardeceres en bote privado</h4>
+                                <p>
+                                    Seguramente has visto atardeceres en alguna parte del mundo, pero, ¿lo has visto más cerca desde un bote privado?, en barú, puedes deleitarte de estos maravillosos atardeceres.
                                 </p>
                                 <p>
-                                    Al comenzar, se inicia en una piscina para después de haber aprendido todo lo básico referente al buceo, se podrá dar el salto al mar. De a poco, de la ayuda de un guía e instructor, irás aprendiendo poco a poco a bucear y a desenvolverte mucho más en el agua.
+                                    Tus amistades y un buen vino serán los acompañantes ideales para estos momentos.
                                 </p>
+                                <h4>Anochecer en baru con bote privado</h4>
                                 <p>
-                                    Seguramente estarás muy animado a tomar este plan para tus vacaciones, pero <strong>¿Qué recomendaciones debes tener si quieres hacer Buceo o Snorckel en barú?</strong>
+                                    Disfrutar de la playa en una noche hermosa, es un plan que debes hacer en baru, sobre todo en ocasiones especiales como:
                                 </p>
+                                <ul>
+                                    <li>Luna de miel</li>
+                                    <li>Renovación de votos matrimoniales</li>
+                                </ul>
                             </div>
                         </div>
                         <div class="col-lg-7">
                             <div class="feature-img">
                                 <div class="row">
-                                    <img src="img/snorckel.png" alt="playa blanca baru">
+                                    <img src="img/barco-privado-en-cartagena-2023.png" alt="barco privado en cartagena 2023">
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="section-header">
-                        <h3>Recomendaciones antes de tomar plan de buceo o snorckel en Barú</h3>
+                        <h3>Recomendaciones antes de alquilar un bote privado en Barú</h3>
                     </div>
                     <div class="feature-text">
                         <p>
-                            Para este plan en específico, se dan diferentes recomendaciones para tenerlo siempre en mente, como lo son:
+                            Antes de disfrutar de un excelente plan, deberás tener en cuenta algunas recomendaciones:
                         </p>
                         <ul>
-                            <li>Prepárate física y mentalmente</li>
-                            <li>Mantén siempre la calma, evita el agotamiento</li>
-                            <li>Mira y no toques</li>
-                            <li>Escoge un excelente día para bucear</li>
-                            <li>Siempre ten precaución</li>
+                            <li>Lea los documentos que debe firmar</li>
+                            <li>Tenga en cuenta el clima</li>
+                            <li>Inspeccione el barco</li>
+                            <li>Si es posible, contrate un capitán</li>
                         </ul>
-                        <p>
-                            Con estas recomendaciones podrás pasar un excelente día de buceo; a continuación, te mostraré algunos tours que más adquieren nuestros clientes en barú.
-                        </p>
                     </div>
                 </div>
             </div>
