--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                             </div>
 
                             <div class="col-5 feature-text_items_item">
-                                <h3>Recomendaciones</h3>
+                                <h3>Consejos</h3>
                                 <p>
                                     Ten consejos realistas para tener en cuenta en Cartagena.
                                 </p>
